force-app/main/default/objects/CallRevu360_Portal_and_Interface__c/CallRevu360_Portal_and_Interface__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>CallRevu360 Portal and Interface</label>
</CustomObject>