force-app/main/default/objects/CallRevu360_Portal_and_Interface__c/fields/Ad_Source_Description__c.field-meta.xml
<CustomField>
    <fullName>Ad_Source_Description__c</fullName>
    <label>Ad Source Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>