force-app/main/default/objects/CallRevu360_Portal_and_Interface__c/fields/Call_Revu_Support_Phone__c.field-meta.xml
<CustomField>
    <fullName>Call_Revu_Support_Phone__c</fullName>
    <description>Used in data collection only.</description>
    <label>Call Revu Support Phone</label>
    <type>Phone</type>
</CustomField>