force-app/main/default/objects/CallRevu360_Portal_and_Interface__c/fields/Close_Times_Options__c.field-meta.xml
<CustomField>
    <fullName>Close_Times_Options__c</fullName>
    <label>Close Times Options</label>
    <type>TextArea</type>
</CustomField>