force-app/main/default/objects/CallRevu360_Portal_and_Interface__c/fields/CRM_Description__c.field-meta.xml
<CustomField>
    <fullName>CRM_Description__c</fullName>
    <label>CRM Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>