force-app/main/default/objects/CallRevu360_Portal_and_Interface__c/fields/Dealership_Description__c.field-meta.xml
<CustomField>
    <fullName>Dealership_Description__c</fullName>
    <label>Dealership Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>