force-app/main/default/objects/CallRevu360_Portal_and_Interface__c/fields/Default_Return_URL__c.field-meta.xml
<CustomField>
    <fullName>Default_Return_URL__c</fullName>
    <label>Default Return URL</label>
    <type>TextArea</type>
</CustomField>