force-app/main/default/objects/CallRevu360_Portal_and_Interface__c/fields/End_of_Session_URL__c.field-meta.xml
<CustomField>
    <fullName>End_of_Session_URL__c</fullName>
    <label>End of Session URL</label>
    <type>TextArea</type>
</CustomField>