force-app/main/default/objects/CallRevu360_Portal_and_Interface__c/fields/Hours_Description__c.field-meta.xml
<CustomField>
    <fullName>Hours_Description__c</fullName>
    <label>Hours Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>