force-app/main/default/objects/CallRevu360_Portal_and_Interface__c/fields/Implementation_Calendar_Id__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Calendar_Id__c</fullName>
    <label>Implementation Calendar Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>