force-app/main/default/objects/CallRevu360_Portal_and_Interface__c/fields/Open_Times_Options__c.field-meta.xml
<CustomField>
    <fullName>Open_Times_Options__c</fullName>
    <label>Open Times Options</label>
    <type>TextArea</type>
</CustomField>