force-app/main/default/objects/CallRevu360_Portal_and_Interface__c/fields/Roster_Description__c.field-meta.xml
<CustomField>
    <fullName>Roster_Description__c</fullName>
    <label>Roster Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>