force-app/main/default/objects/CallRevu360_Portal_and_Interface__c/fields/URL_for_PDF__c.field-meta.xml
<CustomField>
    <fullName>URL_for_PDF__c</fullName>
    <label>URL for PDF</label>
    <type>TextArea</type>
</CustomField>